Update logo URL for '27 Nights (2025)'

--- a/Peliculas.html
+++ b/Peliculas.html
@@ -1,4 +1,4 @@
-#EXTINF:-1 tvg-id="" tvg-name="27 Nights (2025)" tvg-logo="https://imgur.com/nZS7nna.jpg" group-title="Drama",27 Nights (2025)
+#EXTINF:-1 tvg-id="" tvg-name="27 Nights (2025)" tvg-logo="https://imgur.com/lQgJSXo.jpg" group-title="Drama",27 Nights (2025)
 https://a.111477.xyz/movies/27%20Nights%20(2025)/27.noches.2025.1080p.NF.WEB-DL.DDP5.1.H.264-playWEB.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="28 Years Later (2025)" tvg-logo="https://imgur.com/0KPPoRm.jpg" group-title="Horror",28 Years Later (2025)
