--- a/Peliculas.html
+++ b/Peliculas.html
@@ -1,16 +1,16 @@
-#EXTINF:-1 tvg-id="" tvg-name="27 Nights (2025)" tvg-logo="https://imgur.com/lQgJSXo.jpg" group-title="Drama",27 Nights (2025)
+#EXTINF:-1 tvg-id="" tvg-name="27 Nights (2025)" tvg-logo="https://imgur.com/My9iZ4U.jpg" group-title="Drama",27 Nights (2025)
 https://a.111477.xyz/movies/27%20Nights%20(2025)/27.noches.2025.1080p.NF.WEB-DL.DDP5.1.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="28 Years Later (2025)" tvg-logo="https://imgur.com/0KPPoRm.jpg" group-title="Horror",28 Years Later (2025)
+#EXTINF:-1 tvg-id="" tvg-name="28 Years Later (2025)" tvg-logo="https://imgur.com/kdWfBqq.jpg" group-title="Horror",28 Years Later (2025)
 https://a.111477.xyz/movies/28%20Years%20Later%20(2025)/28.Years.Later.2025.1080p.MA.WEB-DL.DDP5.1.H.264.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="2K Love Story (2025)" tvg-logo="https://imgur.com/tEJKUp3.jpg" group-title="Romance",2K Love Story (2025)
 https://a.111477.xyz/movies/2K%20Love%20Story%20(2025)/2K.Love.Story.2025.1080p.WEBRip.DDP.5.1.10bit.H.265-iVy.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="40 Acres (2025)" tvg-logo="https://imgur.com/ld1kLOZ.jpg" group-title="Drama",40 Acres (2025)
+#EXTINF:-1 tvg-id="" tvg-name="40 Acres (2025)" tvg-logo="https://imgur.com/G3cGijX.jpg" group-title="Drama",40 Acres (2025)
 https://a.111477.xyz/movies/40%20Acres%20(2025)/40.Acres.2024.1080p.WEBRip.x265-DH.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="825 Forest Road (2025)" tvg-logo="https://imgur.com/OF4rpRH.jpg" group-title="Horror",825 Forest Road (2025)
+#EXTINF:-1 tvg-id="" tvg-name="825 Forest Road (2025)" tvg-logo="https://imgur.com/DHI4VkI.jpg" group-title="Horror",825 Forest Road (2025)
 https://a.111477.xyz/movies/825%20Forest%20Road%20(2025)/825.Forest.Road.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-Kitsune.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="9/11 - The Day the World Stood Still (2025)" tvg-logo="https://imgur.com/FLSZPUW.jpg" group-title="Documentary",9/11 - The Day the World Stood Still (2025)
