Update movie logos in Peliculas.html

--- a/Peliculas.html
+++ b/Peliculas.html
@@ -25,16 +25,16 @@ https://a.111477.xyz/movies/A%20Breed%20Apart%20(2025)/A.BREED.APART.2025.1080p.
 #EXTINF:-1 tvg-id="" tvg-name="A Christmas Angel Match (2025)" tvg-logo="https://imgur.com/Jcat9Qm.jpg" group-title="Romance",A Christmas Angel Match (2025)
 https://a.111477.xyz/movies/A%20Christmas%20Angel%20Match%20(2025)/A.Christmas.Angel.Match.2025.1080p.AMZN.WEB-DL.DDP2.0.H.264-Kitsune.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Cool Fish 2 (2025)" tvg-logo="https://imgur.com/q0wXDon.jpg" group-title="Comedy",A Cool Fish 2 (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Cool Fish 2 (2025)" tvg-logo="https://imgur.com/KXZj6nX.jpg" group-title="Comedy",A Cool Fish 2 (2025)
 https://a.111477.xyz/movies/A%20Cool%20Fish%202%20(2025)/A.Cool.Fish.2.2025.1080p.WEB-DL.H264.AAC-HHWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Copenhagen Love Story (2025)" tvg-logo="https://imgur.com/5ToLdc6.jpg" group-title="Romance",A Copenhagen Love Story (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Copenhagen Love Story (2025)" tvg-logo="https://imgur.com/7e5s7IU.jpg" group-title="Romance",A Copenhagen Love Story (2025)
 https://a.111477.xyz/movies/A%20Copenhagen%20Love%20Story%20(2025)/A.Copenhagen.Love.Story.2025.1080p.WEBRip.DDP.5.1.10bit.H.265-iVy.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Deadly American Marriage (2025)" tvg-logo="https://imgur.com/0Pa5euD.jpg" group-title="Horror",A Deadly American Marriage (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Deadly American Marriage (2025)" tvg-logo="https://imgur.com/wVIHUl0.jpg" group-title="Horror",A Deadly American Marriage (2025)
 https://a.111477.xyz/movies/A%20Deadly%20American%20Marriage%20(2025)/A.Deadly.American.Marriage.2025.1080p.NF.WEB-DL.DDP5.1.Atmos.H.264-FLUX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Knight's War (2025)" tvg-logo="https://imgur.com/AUC52wH.jpg" group-title="Action",A Knight's War (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Knight's War (2025)" tvg-logo="https://imgur.com/pS57O8Y.jpg" group-title="Action",A Knight's War (2025)
 https://a.111477.xyz/movies/A%20Knight's%20War%20(2025)/A.Knights.War.2025.1080p.WEB-DL.AAC5.1.x265-NeoNoir.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="A Line of Fire (2025)" tvg-logo="https://imgur.com/ZPsB0mK.jpg" group-title="Action",A Line of Fire (2025)
