Update movie details and logos in Peliculas.html

--- a/Peliculas.html
+++ b/Peliculas.html
@@ -37,28 +37,28 @@ https://a.111477.xyz/movies/A%20Deadly%20American%20Marriage%20(2025)/A.Deadly.A
 #EXTINF:-1 tvg-id="" tvg-name="A Knight's War (2025)" tvg-logo="https://imgur.com/pS57O8Y.jpg" group-title="Action",A Knight's War (2025)
 https://a.111477.xyz/movies/A%20Knight's%20War%20(2025)/A.Knights.War.2025.1080p.WEB-DL.AAC5.1.x265-NeoNoir.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Line of Fire (2025)" tvg-logo="https://imgur.com/ZPsB0mK.jpg" group-title="Action",A Line of Fire (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Line of Fire (2025)" tvg-logo="https://imgur.com/vtVqa4i.jpg" group-title="Action",A Line of Fire (2025)
 https://a.111477.xyz/movies/A%20Line%20of%20Fire%20(2025)/A.Line.Of.Fire.2025.720p.WEB.H264-ZeroTwo.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Minecraft Movie (2025)" tvg-logo="https://imgur.com/CE4o5qP.jpg" group-title="Adventure",A Minecraft Movie (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Minecraft Movie (2025)" tvg-logo="https://imgur.com/EF5d8tX.jpg" group-title="Adventure",A Minecraft Movie (2025)
 http://a.111477.xyz/movies/A%20Minecraft%20Movie%20(2025)/A.Minecraft.Movie.2025.1080p.Workprint.V2.HD.DC.x264-DualYG.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Murder in Oakland - Beauty is Deadly (2025)" tvg-logo="https://imgur.com/12rffpP.jpg" group-title="Action",A Murder in Oakland - Beauty is Deadly (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Murder in Oakland - Beauty is Deadly (2025)" tvg-logo="https://imgur.com/v4FNuvF.jpg" group-title="Action",A Murder in Oakland - Beauty is Deadly (2025)
 https://a.111477.xyz/movies/A%20Murder%20in%20Oakland%20-%20Beauty%20is%20Deadly%20(2025)/A.Murder.In.Oakland.Beauty.Is.Deadly.2025.1080p.AMZN.WEB-DL.H264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Nice Indian Boy (2025)" tvg-logo="https://imgur.com/bdgDJmt.jpg" group-title="Comedy",A Nice Indian Boy (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Nice Indian Boy (2025)" tvg-logo="https://imgur.com/P8k6CW4.jpg" group-title="Comedy",A Nice Indian Boy (2025)
 https://a.111477.xyz/movies/A%20Nice%20Indian%20Boy%20(2025)/A.Nice.Indian.Boy.2025.1080p.WEBRip.x265-DH.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Normal Woman (2025)" tvg-logo="https://imgur.com/BmJVT86.jpg" group-title="Drama",A Normal Woman (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Normal Woman (2025)" tvg-logo="https://imgur.com/usdhEkb.jpg" group-title="Drama",A Normal Woman (2025)
 https://a.111477.xyz/movies/A%20Normal%20Woman%20(2025)/A.Normal.Woman.2025.1080p.WEBRip.DDP.5.1.10bit.H.265-iVy.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Royal Montana Christmas (2025)" tvg-logo="https://imgur.com/oUOTpc2.jpg" group-title="Romance",A Royal Montana Christmas (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Royal Montana Christmas (2025)" tvg-logo="https://imgur.com/YZV7T5W.jpg" group-title="Romance",A Royal Montana Christmas (2025)
 https://a.111477.xyz/movies/A%20Royal%20Montana%20Christmas%20(2025)/A.Royal.Montana.Christmas.2025.1080p.AMZN.WEB-DL.DDP2.0.H.264-Kitsune.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Widow's Game (2025)" tvg-logo="https://imgur.com/HMKeHoF.jpg" group-title="Horror",A Widow's Game (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Widow's Game (2025)" tvg-logo="https://imgur.com/HefSoBa.jpg" group-title="Horror",A Widow's Game (2025)
 https://a.111477.xyz/movies/A%20Widow's%20Game%20(2025)/La.viuda.negra.2025.1080p.NF.WEB-DL.DD.5.1.Atmos.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="A Working Man (2025)" tvg-logo="https://imgur.com/dpUuvox.jpg" group-title="Drama",A Working Man (2025)
+#EXTINF:-1 tvg-id="" tvg-name="A Working Man (2025)" tvg-logo="https://imgur.com/7L7X3l1.jpg" group-title="Drama",A Working Man (2025)
 https://a.111477.xyz/movies/A%20Working%20Man%20(2025)/A.Working.Man.2025.1080p.WEB-DL.H264-YG.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Abduct (2025)" tvg-logo="https://imgur.com/Z6W5JU4.jpg" group-title="Horror",Abduct (2025)
