Update TVG logos for multiple movies
Updated TVG logos for several movies in the list.

--- a/Peliculas.html
+++ b/Peliculas.html
@@ -61,28 +61,28 @@ https://a.111477.xyz/movies/A%20Widow's%20Game%20(2025)/La.viuda.negra.2025.1080
 #EXTINF:-1 tvg-id="" tvg-name="A Working Man (2025)" tvg-logo="https://imgur.com/7L7X3l1.jpg" group-title="Drama",A Working Man (2025)
 https://a.111477.xyz/movies/A%20Working%20Man%20(2025)/A.Working.Man.2025.1080p.WEB-DL.H264-YG.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Abduct (2025)" tvg-logo="https://imgur.com/Z6W5JU4.jpg" group-title="Horror",Abduct (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Abduct (2025)" tvg-logo="https://imgur.com/jg5N8cZ.jpg" group-title="Horror",Abduct (2025)
 https://a.111477.xyz/movies/Abduct%20(2025)/Abduct.2025.1080p.AMZN.WEB-DL.H264-vase.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Abraham's Boys (2025)" tvg-logo="https://imgur.com/nNkSu9n.jpg" group-title="Drama",Abraham's Boys (2025)
 https://a.111477.xyz/movies/Abraham's%20Boys%20(2025)/Abrahams.Boys.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-BYNDR.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Ad Vitam (2025)" tvg-logo="https://imgur.com/iznUgK8.jpg" group-title="Drama",Ad Vitam (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Ad Vitam (2025)" tvg-logo="https://imgur.com/g6Z3DQ7.jpg" group-title="Drama",Ad Vitam (2025)
 https://a.111477.xyz/movies/Ad%20Vitam%20(2025)/Ad.Vitam.2025.NORDiC.1080p.WEB-DL.DDP5.1.Atmos.H.264-BANDOLEROS.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Adulthood (2025)" tvg-logo="https://imgur.com/bBtRiFd.jpg" group-title="Drama",Adulthood (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Adulthood (2025)" tvg-logo="https://imgur.com/WqKoEJo.jpg" group-title="Drama",Adulthood (2025)
 https://a.111477.xyz/movies/Adulthood%20(2025)/Adulthood.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-BYNDR.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Adventures in Love & Birding (2025)" tvg-logo="https://imgur.com/BjabIVv.jpg" group-title="Romance",Adventures in Love & Birding (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Adventures in Love & Birding (2025)" tvg-logo="https://imgur.com/SVJuVUg.jpg" group-title="Romance",Adventures in Love & Birding (2025)
 https://a.111477.xyz/movies/Adventures%20in%20Love%20&%20Birding%20(2025)/Adventures.in.Love.and.Birding.2025.1080p.AMZN.WEB-DL.DDP2.0.H.264-Kitsune.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="AEW Dynasty (2025)" tvg-logo="https://imgur.com/0A9mR1y.jpg" group-title="Sports",AEW Dynasty (2025)
+#EXTINF:-1 tvg-id="" tvg-name="AEW Dynasty (2025)" tvg-logo="https://imgur.com/rZJ0kQt.jpg" group-title="Sports",AEW Dynasty (2025)
 https://a.111477.xyz/movies/AEW%20Dynasty%20(2025)/AEW.Dynasty.2025.1080p.WEB-DL.H264-NWCHD.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="AEW Revolution (2025)" tvg-logo="https://imgur.com/OHqDFFu.jpg" group-title="Sports",AEW Revolution (2025)
+#EXTINF:-1 tvg-id="" tvg-name="AEW Revolution (2025)" tvg-logo="https://imgur.com/aCObOqx.jpg" group-title="Sports",AEW Revolution (2025)
 https://a.111477.xyz/movies/AEW%20Revolution%20(2025)/AEW.Revolution.2025.PPV.1080p.WEB.h264-HEEL.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Affinity (2025)" tvg-logo="https://imgur.com/XpIa05l.jpg" group-title="Drama",Affinity (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Affinity (2025)" tvg-logo="https://imgur.com/1fAgNnY.jpg" group-title="Drama",Affinity (2025)
 https://a.111477.xyz/movies/Affinity%20(2025)/Affinity.2025.1080p.AMZN.WEB-DL.H264-AtotIK.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Afterburn (2025)" tvg-logo="https://imgur.com/4U2j1r1.jpg" group-title="Action",Afterburn (2025)
