--- a/Peliculas.html
+++ b/Peliculas.html
@@ -85,58 +85,58 @@ https://a.111477.xyz/movies/AEW%20Revolution%20(2025)/AEW.Revolution.2025.PPV.10
 #EXTINF:-1 tvg-id="" tvg-name="Affinity (2025)" tvg-logo="https://imgur.com/1fAgNnY.jpg" group-title="Drama",Affinity (2025)
 https://a.111477.xyz/movies/Affinity%20(2025)/Affinity.2025.1080p.AMZN.WEB-DL.H264-AtotIK.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Afterburn (2025)" tvg-logo="https://imgur.com/4U2j1r1.jpg" group-title="Action",Afterburn (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Afterburn (2025)" tvg-logo="https://imgur.com/WctEQaZ.jpg" group-title="Action",Afterburn (2025)
 https://a.111477.xyz/movies/Afterburn%20(2025)/Afterburn.2025.1080p.WEB-DL.x264-SyncUP.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Air Force Elite - Thunderbirds (2025)" tvg-logo="https://imgur.com/sO4YhLE.jpg" group-title="Documentary",Air Force Elite - Thunderbirds (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Air Force Elite - Thunderbirds (2025)" tvg-logo="https://imgur.com/l6CNNqn.jpg" group-title="Documentary",Air Force Elite - Thunderbirds (2025)
 https://a.111477.xyz/movies/Air%20Force%20Elite%20-%20Thunderbirds%20(2025)/Air.Force.Elite.Thunderbirds.2025.1080p.NF.WEB-DL.DDP5.1.Atmos.H.264-FLUX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Alarum (2025)" tvg-logo="https://imgur.com/rNpc0TY.jpg" group-title="Horror",Alarum (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Alarum (2025)" tvg-logo="https://imgur.com/DwLSlAM.jpg" group-title="Horror",Alarum (2025)
 https://a.111477.xyz/movies/Alarum%20(2025)/ALARUM.2025.1080p.WEB.H264-SCENE.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Alexander and the Terrible, Horrible, No Good, Very Bad Road Trip (2025)" tvg-logo="https://imgur.com/gxJCsAt.jpg" group-title="Comedy",Alexander and the Terrible, Horrible, No Good, Very Bad Road Trip (2025)
 https://a.111477.xyz/movies/Alexander%20and%20the%20Terrible,%20Horrible,%20No%20Good,%20Very%20Bad%20Road%20Trip%20(2025)/Alexander.and.the.Terrible.Horrible.No.Good.Very.Bad.Road.Trip.2025.1080p.WEB.h264-EDITH.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Alien Contact - Government Coverup (2025)" tvg-logo="https://imgur.com/7kb1521.jpg" group-title="Science Fiction",Alien Contact - Government Coverup (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Alien Contact - Government Coverup (2025)" tvg-logo="https://imgur.com/a1Kh7ym.jpg" group-title="Science Fiction",Alien Contact - Government Coverup (2025)
 https://a.111477.xyz/movies/Alien%20Contact%20-%20Government%20Coverup%20(2025)/Alien.Contact.Government.Coverup.2025.1080p.WEB.H264-CBFM.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Alien Invasion - Rise of the Phoenix (2025)" tvg-logo="https://imgur.com/SqtqmPc.jpg" group-title="Science Fiction",Alien Invasion - Rise of the Phoenix (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Alien Invasion - Rise of the Phoenix (2025)" tvg-logo="https://imgur.com/QIvcvm4.jpg" group-title="Science Fiction",Alien Invasion - Rise of the Phoenix (2025)
 https://a.111477.xyz/movies/Alien%20Invasion%20-%20Rise%20of%20the%20Phoenix%20(2025)/Alien.Invasion.Rise.Of.The.Phoenix.2025.1080p.BluRay.x264-SPHD.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="All of You (2025)" tvg-logo="https://imgur.com/b9mWejo.jpg" group-title="Romance",All of You (2025)
+#EXTINF:-1 tvg-id="" tvg-name="All of You (2025)" tvg-logo="https://imgur.com/UPk0l0b.jpg" group-title="Romance",All of You (2025)
 https://a.111477.xyz/movies/All%20of%20You%20(2025)/All.of.You.2024.1080p.ATVP.WEB-DL.DDP5.1.Atmos.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="All the Devils Are Here (2025)" tvg-logo="https://imgur.com/x97rHPc.jpg" group-title="Horror",All the Devils Are Here (2025)
+#EXTINF:-1 tvg-id="" tvg-name="All the Devils Are Here (2025)" tvg-logo="https://imgur.com/CpHrRO6.jpg" group-title="Horror",All the Devils Are Here (2025)
 https://a.111477.xyz/movies/All%20the%20Devils%20Are%20Here%20(2025)/Alle.Teufel.sind.hier.2025.GERMAN.DL.1080p.WEB.H264-MGE.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="All the Lost Ones (2025)" tvg-logo="https://imgur.com/eGx9Ym1.jpg" group-title="Drama",All the Lost Ones (2025)
+#EXTINF:-1 tvg-id="" tvg-name="All the Lost Ones (2025)" tvg-logo="https://imgur.com/4CnxeRP.jpg" group-title="Drama",All the Lost Ones (2025)
 https://a.111477.xyz/movies/All%20the%20Lost%20Ones%20(2025)/All.The.Lost.Ones.2024.1080p.AMZN.WEB-DL.DDP5.1.H.264-FLUX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Alma & the Wolf (2025)" tvg-logo="https://imgur.com/RQzXnDF.jpg" group-title="Fantasy",Alma & the Wolf (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Alma & the Wolf (2025)" tvg-logo="https://imgur.com/DjSTBT7.jpg" group-title="Fantasy",Alma & the Wolf (2025)
 https://a.111477.xyz/movies/Alma%20&%20the%20Wolf%20(2025)/Alma.And.The.Wolf.2025.1080p.WEBRip.5.1-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Almost Cops (2025)" tvg-logo="https://imgur.com/TcVGeYS.jpg" group-title="Comedy",Almost Cops (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Almost Cops (2025)" tvg-logo="https://imgur.com/98E4E4J.jpg" group-title="Comedy",Almost Cops (2025)
 https://a.111477.xyz/movies/Almost%20Cops%20(2025)/Almost Cops (2025) 1080p H265 ITA ENG EAC3 AC3 5.1 Sub Ita Eng NUEng-TheEmojiCreW.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="American Scream (2025)" tvg-logo="https://imgur.com/R7c8CPP.jpg" group-title="Horror",American Scream (2025)
+#EXTINF:-1 tvg-id="" tvg-name="American Scream (2025)" tvg-logo="https://imgur.com/vYcYsys.jpg" group-title="Horror",American Scream (2025)
 https://a.111477.xyz/movies/American%20Scream%20(2025)/American.Scream.2025.1080p.AMZN.WEB-DL.H264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="American Sweatshop (2025)" tvg-logo="https://imgur.com/gQq1Y8Q.jpg" group-title="Horror",American Sweatshop (2025)
+#EXTINF:-1 tvg-id="" tvg-name="American Sweatshop (2025)" tvg-logo="https://imgur.com/f9n6egf.jpg" group-title="Horror",American Sweatshop (2025)
 https://a.111477.xyz/movies/American%20Sweatshop%20(2025)/American.Sweatshop.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-BYNDR.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="American Wages (2025)" tvg-logo="https://imgur.com/qxOFiFY.jpg" group-title="Horror",American Wages (2025)
+#EXTINF:-1 tvg-id="" tvg-name="American Wages (2025)" tvg-logo="https://imgur.com/0BufWqe.jpg" group-title="Horror",American Wages (2025)
 https://a.111477.xyz/movies/American%20Wages%20(2025)/American.Wages.2025.1080p.AMZN.WEB-DL.H264-vase.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Americana (2025)" tvg-logo="https://imgur.com/oVIOwYZ.jpg" group-title="Drama",Americana (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Americana (2025)" tvg-logo="https://imgur.com/QKHGhwb.jpg" group-title="Drama",Americana (2025)
 https://a.111477.xyz/movies/Americana%20(2025)/Americana.2023.1080p.WEB.H264-KBOX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Amongst the Wolves (2025)" tvg-logo="https://imgur.com/8XDI6Rh.jpg" group-title="Adventure",Amongst the Wolves (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Amongst the Wolves (2025)" tvg-logo="https://imgur.com/jex3D9C.jpg" group-title="Adventure",Amongst the Wolves (2025)
 https://a.111477.xyz/movies/Amongst%20the%20Wolves%20(2025)/Amongst.The.Wolves.2024.1080p.WEBRip.5.1-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="An Endless Wedding (2025)" tvg-logo="https://imgur.com/KjW3k20.jpg" group-title="Romance",An Endless Wedding (2025)
+#EXTINF:-1 tvg-id="" tvg-name="An Endless Wedding (2025)" tvg-logo="https://imgur.com/RcQmlGc.jpg" group-title="Romance",An Endless Wedding (2025)
 https://a.111477.xyz/movies/An%20Endless%20Wedding%20(2025)/An.Endless.Wedding.2025.1080p.AMZN.WEB-DL.DDP5.1.H264-SPWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="An Honest Life (2025)" tvg-logo="https://imgur.com/SDpVxzv.jpg" group-title="Drama",An Honest Life (2025)
+#EXTINF:-1 tvg-id="" tvg-name="An Honest Life (2025)" tvg-logo="https://imgur.com/1WuzWbx.jpg" group-title="Drama",An Honest Life (2025)
 https://a.111477.xyz/movies/An%20Honest%20Life%20(2025)/An.Honest.Life.2025.1080p.NF.WEB-DL.DUAL.DDP5.1.Atmos.H.264-Kitsune.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="An Unexpected Valentine (2025)" tvg-logo="https://imgur.com/aXYu6Dd.jpg" group-title="Romance",An Unexpected Valentine (2025)
