--- a/Peliculas.html
+++ b/Peliculas.html
@@ -139,82 +139,82 @@ https://a.111477.xyz/movies/An%20Endless%20Wedding%20(2025)/An.Endless.Wedding.2
 #EXTINF:-1 tvg-id="" tvg-name="An Honest Life (2025)" tvg-logo="https://imgur.com/1WuzWbx.jpg" group-title="Drama",An Honest Life (2025)
 https://a.111477.xyz/movies/An%20Honest%20Life%20(2025)/An.Honest.Life.2025.1080p.NF.WEB-DL.DUAL.DDP5.1.Atmos.H.264-Kitsune.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="An Unexpected Valentine (2025)" tvg-logo="https://imgur.com/aXYu6Dd.jpg" group-title="Romance",An Unexpected Valentine (2025)
+#EXTINF:-1 tvg-id="" tvg-name="An Unexpected Valentine (2025)" tvg-logo="https://imgur.com/TvO5EYX.jpg" group-title="Romance",An Unexpected Valentine (2025)
 https://a.111477.xyz/movies/An%20Unexpected%20Valentine%20(2025)/An.Unexpected.Valentine.2025.1080p.AMZN.WEB-DL.H264-MADSKY.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Andrew Schulz - LIFE (2025)" tvg-logo="https://imgur.com/cXeEt9B.jpg" group-title="Comedy",Andrew Schulz - LIFE (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Andrew Schulz - LIFE (2025)" tvg-logo="https://imgur.com/sxByPRk.jpg" group-title="Comedy",Andrew Schulz - LIFE (2025)
 https://a.111477.xyz/movies/Andrew%20Schulz%20-%20LIFE%20(2025)/Andrew.Schulz.LIFE.2025.1080p.NF.WEB-DL.DDP5.1.H.264-FLUX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Anemone (2025)" tvg-logo="https://imgur.com/CYJe7BU.jpg" group-title="Drama",Anemone (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Anemone (2025)" tvg-logo="https://imgur.com/ohB8CXR.jpg" group-title="Drama",Anemone (2025)
 https://a.111477.xyz/movies/Anemone%20(2025)/Anemone.2025.Hybrid.2160p.WEB-DL.DV.HDR.DDP5.1.Atmos.H265-AOC.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Another Simple Favor (2025)" tvg-logo="https://imgur.com/ZCxYz4L.jpg" group-title="Horror",Another Simple Favor (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Another Simple Favor (2025)" tvg-logo="https://imgur.com/KGO6Wte.jpg" group-title="Horror",Another Simple Favor (2025)
 https://a.111477.xyz/movies/Another%20Simple%20Favor%20(2025)/Another.Simple.Favor.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264.DUAL-BiOMA.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Apple Music Live - Björk (Cornucopia) (2025)" tvg-logo="https://imgur.com/c2U6KvW.jpg" group-title="Music",Apple Music Live - Björk (Cornucopia) (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Apple Music Live - Björk (Cornucopia) (2025)" tvg-logo="https://imgur.com/aAuDM5D.jpg" group-title="Music",Apple Music Live - Björk (Cornucopia) (2025)
 https://a.111477.xyz/movies/Apple%20Music%20Live%20-%20Bj%C3%B6rk%20(2025)/Apple.Music.Live.Bjoerk.2025.1080p.WEBRip.DDP.Atmos.5.1.10bit.H.265-iVy.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Ari Shaffir - America's Sweetheart (2025)" tvg-logo="https://imgur.com/FbENV4L.jpg" group-title="Comedy",Ari Shaffir - America's Sweetheart (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Ari Shaffir - America's Sweetheart (2025)" tvg-logo="https://imgur.com/uVzYXXC.jpg" group-title="Comedy",Ari Shaffir - America's Sweetheart (2025)
 https://a.111477.xyz/movies/Ari%20Shaffir%20-%20America's%20Sweetheart%20(2025)/ari.shaffir.americas.sweetheart.2025.1080p.web.h264-accomplishedyak.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="ARMED (2025)" tvg-logo="https://imgur.com/1Ry4XSW.jpg" group-title="Action",ARMED (2025)
 https://a.111477.xyz/movies/ARMED%20(2025)/Armed.2025.1080p.WEBRip-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Art Attack! The Dissection of Terrifier 3 (2025)" tvg-logo="https://imgur.com/WnDel5x.jpg" group-title="Documentary",Art Attack! The Dissection of Terrifier 3 (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Art Attack! The Dissection of Terrifier 3 (2025)" tvg-logo="https://imgur.com/NxwUjSl.jpg" group-title="Documentary",Art Attack! The Dissection of Terrifier 3 (2025)
 https://a.111477.xyz/movies/Art%20Attack!%20The%20Dissection%20of%20Terrifier%203%20(2025)/Art.Attack.The.Dissection.Of.Terrifier.3.2025.1080p.AMZN.WEB-DL.H264-Kitsune.mp4
 
 #EXTINF:-1 tvg-id="" tvg-name="Ash (2025)" tvg-logo="https://imgur.com/M1pyMiL.jpg" group-title="Drama",Ash (2025)
 https://a.111477.xyz/movies/Ash%20(2025)/Ash.2025.1080p.WEB.H264-SCENE.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Audrey's Children (2025)" tvg-logo="https://imgur.com/CDy3DpK.jpg" group-title="Drama",Audrey's Children (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Audrey's Children (2025)" tvg-logo="https://imgur.com/3GPND80.jpg" group-title="Drama",Audrey's Children (2025)
 https://a.111477.xyz/movies/Audrey's%20Children%20(2025)/Audreys.Children.2025.1080p.WEBRip.x265-DH.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Azaad (2025)" tvg-logo="https://imgur.com/M3XGK0r.jpg" group-title="Action",Azaad (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Azaad (2025)" tvg-logo="https://imgur.com/nicmWdO.jpg" group-title="Action",Azaad (2025)
 https://a.111477.xyz/movies/Azaad%20(2025)/Azaad.2025.1080p.NF.WEB-DL.DD.5.1.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Aztec Batman - Clash of Empires (2025)" tvg-logo="https://imgur.com/L0cMKrm.jpg" group-title="Action",Aztec Batman - Clash of Empires (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Aztec Batman - Clash of Empires (2025)" tvg-logo="https://imgur.com/1YoAmQo.jpg" group-title="Action",Aztec Batman - Clash of Empires (2025)
 https://a.111477.xyz/movies/Aztec%20Batman%20-%20Clash%20of%20Empires%20(2025)/Aztec.Batman.Clash.of.Empires.2025.1080p.AMZN.WEB-DL.DUAL.DDP5.1.H.264-BYNDR.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Baby Blue (2025)" tvg-logo="https://imgur.com/5rYMcj2.jpg" group-title="Drama",Baby Blue (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Baby Blue (2025)" tvg-logo="https://imgur.com/fQ2SZsC.jpg" group-title="Drama",Baby Blue (2025)
 https://a.111477.xyz/movies/Baby%20Blue%20(2025)/Baby.Blue.2023.720p.WEB.h264-DiRT.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Baby Invasion (2024)" tvg-logo="https://imgur.com/EGSEncb.jpg" group-title="Horror",Baby Invasion (2024)
+#EXTINF:-1 tvg-id="" tvg-name="Baby Invasion (2024)" tvg-logo="https://imgur.com/Q7lpTlL.jpg" group-title="Horror",Baby Invasion (2024)
 https://a.111477.xyz/movies/Baby%20Invasion%20(2025)/Baby.Invasion.2024.1080p.WEBRip.5.1-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Back in Action (2025)" tvg-logo="https://imgur.com/cE8rZH1.jpg" group-title="Action",Back in Action (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Back in Action (2025)" tvg-logo="https://imgur.com/UlVUbhw.jpg" group-title="Action",Back in Action (2025)
 https://a.111477.xyz/movies/Back%20in%20Action%20(2025)/Back.In.Action.2025.[1080p].[WEBRip].[5.1].[YTS.MX].mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Bad Influence (2025)" tvg-logo="https://imgur.com/ti4awiZ.jpg" group-title="Horror",Bad Influence (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Bad Influence (2025)" tvg-logo="https://imgur.com/XVszPxM.jpg" group-title="Horror",Bad Influence (2025)
 https://a.111477.xyz/movies/Bad%20Influence%20(2025)/Bad.Influence.2025.1080p.NF.WEB-DL.DUAL.DDP5.1.H.264-FLUX.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Bad Man (2025)" tvg-logo="https://imgur.com/a5Cn7UN.jpg" group-title="Action",Bad Man (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Bad Man (2025)" tvg-logo="https://imgur.com/f6Xk2Kt.jpg" group-title="Action",Bad Man (2025)
 https://a.111477.xyz/movies/Bad%20Man%20(2025)/Bad.Man.[2025].1080p.WEBRip.5.1-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Ballerina (2025)" tvg-logo="https://imgur.com/Zch44hz.jpg" group-title="Action",Ballerina (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Ballerina (2025)" tvg-logo="https://imgur.com/8wSCQ9p.jpg" group-title="Action",Ballerina (2025)
 https://a.111477.xyz/movies/Ballerina%20(2025)/Ballerina.2025.MULTI.1080p.WEB.H264-LOST.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Ballerina Assassin (2025)" tvg-logo="https://imgur.com/Jg62pvr.jpg" group-title="Action",Ballerina Assassin (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Ballerina Assassin (2025)" tvg-logo="https://imgur.com/5monNCm.jpg" group-title="Action",Ballerina Assassin (2025)
 https://a.111477.xyz/movies/Ballerina%20Assassin%20(2025)/Ballerina.Assassin.2025.1080p.AMZN.WEB-DL.DD+5.1.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Balloonerism (2025)" tvg-logo="https://imgur.com/Vkn4OxG.jpg" group-title="Drama",Balloonerism (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Balloonerism (2025)" tvg-logo="https://imgur.com/AG3yl0a.jpg" group-title="Drama",Balloonerism (2025)
 https://a.111477.xyz/movies/Balloonerism%20(2025)/Balloonerism.2025.1080p.WEBRip-LAMA.mp4
 
-#EXTINF:-1 tvg-id="" tvg-name="Bambi - The Reckoning (2025)" tvg-logo="https://imgur.com/nqpljbR.jpg" group-title="Horror",Bambi - The Reckoning (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Bambi - The Reckoning (2025)" tvg-logo="https://imgur.com/N4oy5gb.jpg" group-title="Horror",Bambi - The Reckoning (2025)
 https://a.111477.xyz/movies/Bambi%20-%20The%20Reckoning%20(2025)/Bambi The Reckoning 2025 1080p AMZN WEB-DL DD+ 2.0 H.264-jklink1.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Banger (2025)" tvg-logo="https://imgur.com/00NAeb3.jpg" group-title="Comedy",Banger (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Banger (2025)" tvg-logo="https://imgur.com/WgjIvjb.jpg" group-title="Comedy",Banger (2025)
 https://a.111477.xyz/movies/Banger%20(2025)/Banger.2025.1080p.NF.WEB-DL.DDP5.1.H.264-ViSTA.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Bank of Dave 2 - The Loan Ranger (2025)" tvg-logo="https://imgur.com/CHeoTgR.jpg" group-title="Comedy",Bank of Dave 2 - The Loan Ranger (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Bank of Dave 2 - The Loan Ranger (2025)" tvg-logo="https://imgur.com/1VvJPzU.jpg" group-title="Comedy",Bank of Dave 2 - The Loan Ranger (2025)
 https://a.111477.xyz/movies/Bank%20of%20Dave%202%20-%20The%20Loan%20Ranger%20(2025)/Bank.of.Dave.2.The.Loan.Ranger.2025.1080p.WEBRip.DDP.5.1.10bit.H.265-iVy.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Barbie & Teresa - Recipe for Friendship (2025)" tvg-logo="https://imgur.com/glbegbU.jpg" group-title="Animation",Barbie & Teresa - Recipe for Friendship (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Barbie & Teresa - Recipe for Friendship (2025)" tvg-logo="https://imgur.com/2UovNWK.jpg" group-title="Animation",Barbie & Teresa - Recipe for Friendship (2025)
 https://a.111477.xyz/movies/Barbie%20&%20Teresa%20-%20Recipe%20for%20Friendship%20(2025)/Barbie.And.Teresa.Recipe.For.Friendship.2025.1080p.NF.WEB-DL.H264-SiGLA.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Barron's Cove (2025)" tvg-logo="https://imgur.com/vABJa2C.jpg" group-title="Drama",Barron's Cove (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Barron's Cove (2025)" tvg-logo="https://imgur.com/mIkTu7m.jpg" group-title="Drama",Barron's Cove (2025)
 https://a.111477.xyz/movies/Barron's%20Cove%20(2025)/Barrons.Cove.2024.1080p.WEBRip.x265-DH.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Batman Ninja vs. Yakuza League (2025)" tvg-logo="https://imgur.com/SJfUL9R.jpg" group-title="Action",Batman Ninja vs. Yakuza League (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Batman Ninja vs. Yakuza League (2025)" tvg-logo="https://imgur.com/SVOB6Yu.jpg" group-title="Action",Batman Ninja vs. Yakuza League (2025)
 https://a.111477.xyz/movies/Batman%20Ninja%20vs.%20Yakuza%20League%20(2025)/Batman.Ninja.vs.Yakuza.League.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-APEX.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Be Happy (2025)" tvg-logo="https://imgur.com/91FmRQq.jpg" group-title="Comedy",Be Happy (2025)
