--- a/Peliculas.html
+++ b/Peliculas.html
@@ -1,7 +1,7 @@
 #EXTINF:-1 tvg-id="" tvg-name="27 Nights (2025)" tvg-logo="https://imgur.com/My9iZ4U.jpg" group-title="Drama",27 Nights (2025)
 https://a.111477.xyz/movies/27%20Nights%20(2025)/27.noches.2025.1080p.NF.WEB-DL.DDP5.1.H.264-playWEB.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="28 Years Later (2025)" tvg-logo="https://imgur.com/kdWfBqq.jpg" group-title="Horror",28 Years Later (2025)
+#EXTINF:-1 tvg-id="" tvg-name="28 Years Later (2025)" tvg-logo="https://imgur.com/2V325bR.jpg" group-title="Horror",28 Years Later (2025)
 https://a.111477.xyz/movies/28%20Years%20Later%20(2025)/28.Years.Later.2025.1080p.MA.WEB-DL.DDP5.1.H.264.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="2K Love Story (2025)" tvg-logo="https://imgur.com/kdWfBqq.jpg" group-title="Romance",2K Love Story (2025)
