--- a/Peliculas.html
+++ b/Peliculas.html
@@ -67,7 +67,7 @@ https://a.111477.xyz/movies/Abduct%20(2025)/Abduct.2025.1080p.AMZN.WEB-DL.H264-v
 #EXTINF:-1 tvg-id="" tvg-name="Abraham's Boys (2025)" tvg-logo="https://imgur.com/nNkSu9n.jpg" group-title="Drama",Abraham's Boys (2025)
 https://a.111477.xyz/movies/Abraham's%20Boys%20(2025)/Abrahams.Boys.2025.1080p.AMZN.WEB-DL.DDP5.1.H.264-BYNDR.mkv
 
-#EXTINF:-1 tvg-id="" tvg-name="Ad Vitam (2025)" tvg-logo="https://imgur.com/g6Z3DQ7.jpg" group-title="Drama",Ad Vitam (2025)
+#EXTINF:-1 tvg-id="" tvg-name="Ad Vitam (2025)" tvg-logo="https://imgur.com/8Obgfkt.jpg" group-title="Drama",Ad Vitam (2025)
 https://a.111477.xyz/movies/Ad%20Vitam%20(2025)/Ad.Vitam.2025.NORDiC.1080p.WEB-DL.DDP5.1.Atmos.H.264-BANDOLEROS.mkv
 
 #EXTINF:-1 tvg-id="" tvg-name="Adulthood (2025)" tvg-logo="https://imgur.com/WqKoEJo.jpg" group-title="Drama",Adulthood (2025)
